your-spotify/network-policy-mongodb-allow-required-ingress.yaml
# Allow MongoDB access only from required namespaces.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-allow-required-ingress
  namespace: spotify
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: spotify
      ports:
        - protocol: TCP
          port: 27017
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 9216
